--- a/notebooks/gcolab_find_en.ipynb
+++ b/notebooks/gcolab_find_en.ipynb
@@ -1031,7 +1031,7 @@
         "    tag = symbol.join([labels[n] for n in nodes])\n",
         "    return (nodes, tag, results, f(results))\n",
         "\n",
-        "def check_until(net, set=1, fall=0, at=-1):\n",
+        "def check_until(net, set=1, fall=0, at=-1, limit=None):\n",
         "    \"\"\"This function takes a list of analyzed node combinations sorted by their evaluation score.\n",
         "    The function defines an index of the list until which the node combinations are considered epileptogenic.\n",
         "\n",
@@ -1042,14 +1042,17 @@
         "    Args:\n",
         "        net (list): A list of sets returned by evaluate_nodes().\n",
         "        set (int): Defaults to 1.\n",
-        "        fall (int): Defaults to 0.\n",
-        "        at (int): Defaults to -1.\n",
+        "        fall (int): Define score threshold (should be the highest score). Defaults to 0.\n",
+        "        at (int): Denotes the index of the set, containing the results for a node group. Defaults to -1, as this is the current saving format.\n",
+        "        limit (int): Define limit until which the nodes are checked. This could be useful for checking node pairs (if many node pairs have the highest score, the WOI could be uninformative).\n",
         "\n",
         "    Returns:\n",
         "        int: Index of net list.\n",
         "    \"\"\"\n",
         "    print(\"Searching for the index of the last best network...\")\n",
-        "    while set < len(net):\n",
+        "    l = len(net)\n",
+        "    if limit: l = limit\n",
+        "    while set < l:\n",
         "        print(\"Net =\", net[:set])\n",
         "        print(\"Score =\", [n[at] for n in net[:set]][-1])\n",
         "        score = [n[at] for n in net[:set]][-1]\n",
@@ -1265,6 +1268,7 @@
         "      print(f\"\\nChecking networks with {net_size} nodes...\")\n",
         "\n",
         "      head = check_until(possible_node_groups, fall=best_score)\n",
+        "      \n",
         "      count_node_groups = 0\n",
         "\n",
         "      # The condition below checks if all tested node groups have the same score (the best score);\n",
@@ -1274,81 +1278,86 @@
         "\n",
         "        print(\"All possible networks present the best score.\")\n",
         "        selected_net = nodes\n",
-        "        break\n",
+        "        print(f\"\\nSelected network: {selected_net} ({len(selected_net)} nodes in total)\")\n",
         "\n",
-        "      # In case there not all, but many network with the best score, the processing time could become impractical;\n",
-        "      # to bypass this, we define a limit of maximally considered number of top networks as the *max_net_size* parameter.\n",
-        "      # (If the selected network is much larger than the actual resection in good outcome patients, the result is useless.)\n",
-        "      # Thus, among the top networks, a number equal to *max_net_size* of randomly picked networks are selected for the next iteration.\n",
-        "      possible_node_groups = possible_node_groups[:head if head>0 else 1]\n",
-        "      if len(possible_node_groups) >= max_net_size: \n",
+        "        file_net = file_cm.split(\".\")[0]\n",
+        "        REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")\n",
+        "      \n",
+        "      else:\n",
         "\n",
-        "        print(f\"More than {max_net_size} networks present the best score. Randomly selecting {max_net_size} networks from the pool.\")\n",
-        "        possible_node_groups = rd.sample(possible_node_groups, max_net_size)\n",
+        "        # In case there not all, but many network with the best score, the processing time could become impractical;\n",
+        "        # to bypass this, we define a limit of maximally considered number of top networks as the *max_net_size* parameter.\n",
+        "        # (If the selected network is much larger than the actual resection in good outcome patients, the result is useless.)\n",
+        "        # Thus, among the top networks, a number equal to *max_net_size* of randomly picked networks are selected for the next iteration.\n",
+        "        possible_node_groups = possible_node_groups[:head if head>0 else 1]\n",
+        "        if len(possible_node_groups) >= max_net_size: \n",
         "\n",
-        "      for node_group in possible_node_groups:\n",
-        "          # Here, we iterate through the node groups with the highest score, as possibly there are more than one\n",
+        "          print(f\"More than {max_net_size} networks present the best score. Randomly selecting {max_net_size} networks from the pool.\")\n",
+        "          possible_node_groups = rd.sample(possible_node_groups, max_net_size)\n",
         "\n",
-        "          for node in node_ids:\n",
-        "            # All possible nodes are added to the group and tested\n",
+        "        for node_group in possible_node_groups:\n",
+        "            # Here, we iterate through the node groups with the highest score, as possibly there are more than one\n",
         "\n",
-        "            if node not in node_group[0]:\n",
-        "                # Avoiding duplicate nodes\n",
+        "            for node in node_ids:\n",
+        "              # All possible nodes are added to the group and tested\n",
         "\n",
-        "                test_group = node_group[0] + (node,)\n",
+        "              if node not in node_group[0]:\n",
+        "                  # Avoiding duplicate nodes\n",
         "\n",
-        "                # Perform the classification between baseline and WOI epochs, using the support vector machine\n",
-        "                # Compute the cross-validation scores, using the K-Fold method\n",
-        "                # Apply the evaluation function to the cross-validation scores\n",
-        "                eval = evaluate_nodes(test_group, nodes, classify_epochs(cm, test_group))\n",
+        "                  test_group = node_group[0] + (node,)\n",
         "\n",
-        "                # Store the tested node groups in test_nets list and all_node_groups dictionary, under the net_size key\n",
-        "                test_nets.append(eval)\n",
-        "                all_node_groups[net_size].append(eval)\n",
+        "                  # Perform the classification between baseline and WOI epochs, using the support vector machine\n",
+        "                  # Compute the cross-validation scores, using the K-Fold method\n",
+        "                  # Apply the evaluation function to the cross-validation scores\n",
+        "                  eval = evaluate_nodes(test_group, nodes, classify_epochs(cm, test_group))\n",
         "\n",
-        "            count_node_groups += 1\n",
+        "                  # Store the tested node groups in test_nets list and all_node_groups dictionary, under the net_size key\n",
+        "                  test_nets.append(eval)\n",
+        "                  all_node_groups[net_size].append(eval)\n",
         "\n",
-        "\n",
-        "\n",
-        "      print(f\"Tested {count_node_groups} node groups.\")\n",
-        "\n",
-        "      # Sort the latest networks by their score (indexed -1) and save the best evaluation score\n",
-        "      test_nets.sort(key=lambda x:x[-1], reverse=True)\n",
-        "      all_node_groups[net_size].sort(key=lambda x:x[-1], reverse=True)\n",
-        "\n",
-        "      evaluation_score = test_nets[0][-1]\n",
-        "\n",
-        "      print(f\"Best score for networks of size {net_size} =\", evaluation_score)\n",
-        "      print(f\"Best network of size {net_size}: {test_nets[0][1]}\")\n",
-        "\n",
-        "      if evaluation_score >= best_score:\n",
-        "          # If the new score is higher than the previous best score, \n",
-        "          # update the best score and the possible node groups for the next iteration\n",
-        "          if net_size <= max_net_size:\n",
-        "\n",
-        "              best_score = evaluation_score\n",
-        "              print(\"\\nNew best score =\", best_score)\n",
-        "\n",
-        "              head_i = check_until(test_nets, fall=best_score)\n",
-        "              best_net = test_nets[:head_i if head_i>0 else 1]\n",
-        "              print(\"\\nNew best network =\", best_net)\n",
-        "\n",
-        "              possible_node_groups = best_net\n",
-        "              test_nets = []\n",
-        "                              \n",
-        "          net_size += 1\n",
-        "          \n",
-        "      else: \n",
-        "        print(\"A better network not found.\")\n",
-        "        break\n",
-        "\n",
-        "    selected_net = sorted(set([t for n in best_net for t in n[1].split('<->')]))\n",
+        "              count_node_groups += 1\n",
         "\n",
         "\n",
-        "    print(f\"\\nSelected network: {selected_net} ({len(selected_net)} nodes in total)\")\n",
         "\n",
-        "    file_net = file_cm.split(\".\")[0]\n",
-        "    REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")"
+        "        print(f\"Tested {count_node_groups} node groups.\")\n",
+        "\n",
+        "        # Sort the latest networks by their score (indexed -1) and save the best evaluation score\n",
+        "        test_nets.sort(key=lambda x:x[-1], reverse=True)\n",
+        "        all_node_groups[net_size].sort(key=lambda x:x[-1], reverse=True)\n",
+        "\n",
+        "        evaluation_score = test_nets[0][-1]\n",
+        "\n",
+        "        print(f\"Best score for networks of size {net_size} =\", evaluation_score)\n",
+        "        print(f\"Best network of size {net_size}: {test_nets[0][1]}\")\n",
+        "\n",
+        "        if evaluation_score >= best_score:\n",
+        "            # If the new score is higher than the previous best score, \n",
+        "            # update the best score and the possible node groups for the next iteration\n",
+        "            if net_size <= max_net_size:\n",
+        "\n",
+        "                best_score = evaluation_score\n",
+        "                print(\"\\nNew best score =\", best_score)\n",
+        "\n",
+        "                head_i = check_until(test_nets, fall=best_score)\n",
+        "                best_net = test_nets[:head_i if head_i>0 else 1]\n",
+        "                print(\"\\nNew best network =\", best_net)\n",
+        "\n",
+        "                possible_node_groups = best_net\n",
+        "                test_nets = []\n",
+        "                                \n",
+        "            net_size += 1\n",
+        "            \n",
+        "        else: \n",
+        "          print(\"A better network not found.\")\n",
+        "          break\n",
+        "\n",
+        "      selected_net = sorted(set([t for n in best_net for t in n[1].split('<->')]))\n",
+        "\n",
+        "\n",
+        "      print(f\"\\nSelected network: {selected_net} ({len(selected_net)} nodes in total)\")\n",
+        "\n",
+        "      file_net = file_cm.split(\".\")[0]\n",
+        "      REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")"
       ]
     }
   ],
