--- a/notebooks/gcolab_find_en.ipynb
+++ b/notebooks/gcolab_find_en.ipynb
@@ -1349,6 +1349,7 @@
         "            \n",
         "        else: \n",
         "          print(\"A better network not found.\")\n",
+        "          net_size = max_net_size\n",
         "          break\n",
         "\n",
         "      selected_net = sorted(set([t for n in best_net for t in n[1].split('<->')]))\n",
