--- a/notebooks/connectivity_matrices.ipynb
+++ b/notebooks/connectivity_matrices.ipynb
@@ -11,7 +11,8 @@
     "from src.data_legacy import band\n",
     "from src.connectivity import preprocess, connectivity_analysis, phaselock, phaselag, spectral_coherence, PEC, cross_correlation, PAC\n",
     "from src.tools import exclude_from_sz_cm \n",
-    "from os import makedirs"
+    "from os import makedirs\n",
+    "from joblib import Parallel, delayed"
    ]
   },
   {
@@ -408,7 +409,9 @@
     "    cm._set(X = connectivity_analysis(fpp_seizure, spectral_coherence, fs=fpp_seizure[0].shape[1], imag=imag))\n",
     "\n",
     "elif method_code[method_idx] == \"PEC\": \n",
-    "    cm._set(X = [PEC(ep,i+1) for i,ep in enumerate(fpp_seizure)])\n",
+    "    parallelize = Parallel(n_jobs=-1)(delayed(PEC)(ep,i+1) for i,ep in enumerate(fpp_seizure))\n",
+    "    cm_pec = [p for p in parallelize]\n",
+    "    cm._set(X = cm_pec)\n",
     "\n",
     "elif method_code[method_idx] in \"PLV\":\n",
     "    cm._set(X = connectivity_analysis(fpp_seizure, phaselock))\n",
