--- a/notebooks/gcolab_find_en.ipynb
+++ b/notebooks/gcolab_find_en.ipynb
@@ -1282,7 +1282,8 @@
         "\n",
         "        file_net = file_cm.split(\".\")[0]\n",
         "        REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")\n",
-        "      \n",
+        "        net_size = max_net_size+1\n",
+        "\n",
         "      else:\n",
         "\n",
         "        # In case there not all, but many network with the best score, the processing time could become impractical;\n",
@@ -1317,8 +1318,6 @@
         "\n",
         "              count_node_groups += 1\n",
         "\n",
-        "\n",
-        "\n",
         "        print(f\"Tested {count_node_groups} node groups.\")\n",
         "\n",
         "        # Sort the latest networks by their score (indexed -1) and save the best evaluation score\n",
@@ -1349,16 +1348,14 @@
         "            \n",
         "        else: \n",
         "          print(\"A better network not found.\")\n",
-        "          net_size = max_net_size\n",
-        "          break\n",
         "\n",
-        "      selected_net = sorted(set([t for n in best_net for t in n[1].split('<->')]))\n",
+        "          selected_net = sorted(set([t for n in best_net for t in n[1].split('<->')]))\n",
         "\n",
+        "          print(f\"\\nSelected network: {selected_net} ({len(selected_net)} nodes in total)\")\n",
         "\n",
-        "      print(f\"\\nSelected network: {selected_net} ({len(selected_net)} nodes in total)\")\n",
-        "\n",
-        "      file_net = file_cm.split(\".\")[0]\n",
-        "      REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")"
+        "          file_net = file_cm.split(\".\")[0]\n",
+        "          REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")\n",
+        "          net_size = max_net_size+1"
       ]
     }
   ],
