--- a/notebooks/gcolab_connectivity_matrices.ipynb
+++ b/notebooks/gcolab_connectivity_matrices.ipynb
@@ -1270,6 +1270,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "from joblib import Parallel, delayed\n",
+        "\n",
         "def connectivity_analysis(epochs, method, dtail=False, **opts):\n",
         "    \"\"\"Computes a connectivity matrix N×N (N - number of nodes) per epoch, containing connectivity method measures for all node pairs.\n",
         "\n",
@@ -1291,8 +1293,13 @@
         "                for b in range(len(nid)): pairs.append((a,b))\n",
         "            else:\n",
         "                for b in range(a, len(nid)): pairs.append((a,b))                                       \n",
-        "        for pair in pairs:                                                       \n",
-        "            mat[pair[0],pair[1]] = method(e[pair[0]], e[pair[1]], **opts)\n",
+        "\n",
+        "        parallelize = Parallel(n_jobs=-1)(delayed(method)(e[pair[0]], e[pair[1]], **opts) for pair in pairs)\n",
+        "        conn_per_pair = [p for p in parallelize]\n",
+        "\n",
+        "        for i,pair in enumerate(pairs):                                                       \n",
+        "            mat[pair[0],pair[1]] = conn_per_pair[i]\n",
+        "\n",
         "        result.append(mat)     \n",
         "        print('{}: completed '.format(i), end='\\n')                                                                                       \n",
         "    return result"
@@ -1877,34 +1884,37 @@
       },
       "outputs": [],
       "source": [
-        "cm = struct(x=array(x), y=array(y), i=array(i)) # initiating an object for storing a connecivity matrix with shape (x, y) and epoch indices\n",
+        "cm = struct(x=np.array(x), y=np.array(y), i=np.array(i)) # initiating an object for storing a connecivity matrix with shape (x, y) and epoch indices\n",
         "\n",
         "cm._set(nodes = nodes)\n",
         "\n",
+        "epochs = fpp_seizure + fpp_baseline\n",
+        "\n",
         "if method_code[method_idx] == \"SC_\":\n",
-        "    cm._set(X = connectivity_analysis(fpp_seizure, spectral_coherence, fs=fpp_seizure[0].shape[1], imag=imag))\n",
+        "    cm._set(X = connectivity_analysis(epochs, spectral_coherence, fs=resampling, imag=imag))\n",
         "\n",
         "elif method_code[method_idx] == \"PEC\": \n",
-        "    cm._set(X = [PEC(ep,i+1) for i,ep in enumerate(fpp_seizure)]))\n",
+        "    parallelize = Parallel(n_jobs=-1)(delayed(PEC)(ep,i+1) for i,ep in enumerate(fpp_seizure))\n",
+        "    cm_pec = [p for p in parallelize]\n",
+        "    cm._set(X = cm_pec)\n",
         "\n",
         "elif method_code[method_idx] in \"PLV\":\n",
-        "    cm._set(X = connectivity_analysis(fpp_seizure, phaselock))\n",
+        "    cm._set(X = connectivity_analysis(epochs, phaselock))\n",
         "\n",
         "elif method_code[method_idx] == \"PLI\":\n",
-        "    cm._set(X = connectivity_analysis(fpp_seizure, phaselag))\n",
+        "    cm._set(X = connectivity_analysis(epochs, phaselag))\n",
         "\n",
         "elif method_code[method_idx] == \"CC\":\n",
-        "    cm._set(X = connectivity_analysis(fpp_seizure, cross_correlation))\n",
+        "    cm._set(X = connectivity_analysis(epochs, cross_correlation))\n",
         "\n",
         "elif method_code[method_idx] == \"PAC\":\n",
-        "    cm._set(X = connectivity_analysis(fpp_seizure, PAC, True, fpp_seizure[0].shape[1]))\n",
+        "    cm._set(X = connectivity_analysis(epochs, PAC, dtail=True, fs=resampling))\n",
         "\n",
         "if extra_nodes_in is not None:\n",
         "    for m in missing_node_ids:\n",
-        "        mismatch_channel_id = cm.nodes.index(m)\n",
-        "        print(\"Mismatched node index:\", mismatch_channel_id)\n",
+        "        print(\"Mismatched node index:\", m)\n",
         "        if extra_nodes_in==\"seizure\":\n",
-        "            cm.X = exclude_from_sz_cm(cm.X, mismatch_channel_id)\n",
+        "            cm.X = exclude_from_sz_cm(cm.X, m)\n",
         "\n",
         "plt.figure(figsize=(5,5))\n",
         "plt.imshow(cm.X[-1], cmap='Blues', interpolation='nearest')\n",
