--- a/notebooks/gcolab_connectivity_matrices.ipynb
+++ b/notebooks/gcolab_connectivity_matrices.ipynb
@@ -1884,7 +1884,7 @@
       },
       "outputs": [],
       "source": [
-        "cm = struct(x=np.array(x), y=np.array(y), i=np.array(i)) # initiating an object for storing a connecivity matrix with shape (x, y) and epoch indices\n",
+        "cm = struct(x=array(x), y=array(y), i=array(i)) # initiating an object for storing a connecivity matrix with shape (x, y) and epoch indices\n",
         "\n",
         "cm._set(nodes = nodes)\n",
         "\n",
