--- a/notebooks/connectivity_matrices.ipynb
+++ b/notebooks/connectivity_matrices.ipynb
@@ -370,10 +370,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp_seizure = [preprocess(eeg_seizure, ep, resampling) for i,ep in enumerate(x)] \n",
+    "pp_seizure = [preprocess(eeg_seizure, ep, resampling) for i,ep in enumerate(a)] \n",
     "print(\"Resampled to\", pp_seizure[0].shape)\n",
     "\n",
-    "pp_baseline = [preprocess(eeg_baseline, ep, resampling) for i,ep in enumerate(x)] \n",
+    "pp_baseline = [preprocess(eeg_baseline, ep, resampling) for i,ep in enumerate(b)] \n",
     "print(\"Resampled to\", pp_baseline[0].shape)"
    ]
   },
@@ -440,7 +440,8 @@
     "print(cm.X[-1])\n",
     "\n",
     "print(\"Seizure CM shape =\", cm.X[0].shape)\n",
-    "print(\"Baseline CM shape =\", cm.X[-1].shape)"
+    "print(\"Baseline CM shape =\", cm.X[-1].shape)\n",
+    "print(\"Number of CMs saved =\", len(cm.X))"
    ]
   },
   {
