--- a/notebooks/gcolab_connectivity_matrices.ipynb
+++ b/notebooks/gcolab_connectivity_matrices.ipynb
@@ -1272,6 +1272,22 @@
       "source": [
         "from joblib import Parallel, delayed\n",
         "\n",
+        "def analyze_epoch(epoch, method, dtail, **opts):\n",
+        "    mat = zeros((len(epoch),len(epoch)))                                    \n",
+        "    nid, pairs = list(range(len(epoch))), []\n",
+        "    for a in range(len(nid)):                             \n",
+        "        if dtail:\n",
+        "            for b in range(len(nid)): pairs.append((a,b))\n",
+        "        else:\n",
+        "            for b in range(a, len(nid)): pairs.append((a,b))                                       \n",
+        "\n",
+        "    parallelize = Parallel(n_jobs=-1)(delayed(method)(epoch[pair[0]], epoch[pair[1]], **opts) for pair in pairs)\n",
+        "    conn_per_pair = [p for p in parallelize]\n",
+        "\n",
+        "    for pair_idx, pair in enumerate(pairs):                                                       \n",
+        "        mat[pair[0],pair[1]] = conn_per_pair[pair_idx]\n",
+        "    return mat\n",
+        "\n",
         "def connectivity_analysis(epochs, method, dtail=False, **opts):\n",
         "    \"\"\"Computes a connectivity matrix N×N (N - number of nodes) per epoch, containing connectivity method measures for all node pairs.\n",
         "\n",
@@ -1284,25 +1300,9 @@
         "        list: List of connectivity matrices for all epochs.\n",
         "    \"\"\"\n",
         "    print('Connectivity Analysis: '+str(method).split()[1])\n",
-        "    result = [] \n",
-        "    for i,e in enumerate(epochs):    \n",
-        "        mat = zeros((len(e),len(e)))                                    \n",
-        "        nid, pairs = list(range(len(e))), []\n",
-        "        for a in range(len(nid)):                             \n",
-        "            if dtail:\n",
-        "                for b in range(len(nid)): pairs.append((a,b))\n",
-        "            else:\n",
-        "                for b in range(a, len(nid)): pairs.append((a,b))                                       \n",
-        "\n",
-        "        parallelize = Parallel(n_jobs=-1)(delayed(method)(e[pair[0]], e[pair[1]], **opts) for pair in pairs)\n",
-        "        conn_per_pair = [p for p in parallelize]\n",
-        "\n",
-        "        for i,pair in enumerate(pairs):                                                       \n",
-        "            mat[pair[0],pair[1]] = conn_per_pair[i]\n",
-        "\n",
-        "        result.append(mat)     \n",
-        "        print('{}: completed '.format(i), end='\\n')                                                                                       \n",
-        "    return result"
+        "    parallelize = Parallel(n_jobs=-1)(delayed(analyze_epoch)(e, method, dtail, **opts) for e in epochs)\n",
+        "    cm = [mat for mat in parallelize]\n",
+        "    return cm"
       ]
     },
     {
@@ -1833,10 +1833,10 @@
       },
       "outputs": [],
       "source": [
-        "pp_seizure = [preprocess(eeg_seizure, ep, resampling) for i,ep in enumerate(x)] \n",
+        "pp_seizure = [preprocess(eeg_seizure, ep, resampling) for i,ep in enumerate(a)] \n",
         "print(\"Resampled to\", pp_seizure[0].shape)\n",
         "\n",
-        "pp_baseline = [preprocess(eeg_baseline, ep, resampling) for i,ep in enumerate(x)] \n",
+        "pp_baseline = [preprocess(eeg_baseline, ep, resampling) for i,ep in enumerate(b)] \n",
         "print(\"Resampled to\", pp_baseline[0].shape)"
       ]
     },
@@ -1923,7 +1923,8 @@
         "print(cm.X[-1])\n",
         "\n",
         "print(\"Seizure CM shape =\", cm.X[0].shape)\n",
-        "print(\"Baseline CM shape =\", cm.X[-1].shape)"
+        "print(\"Baseline CM shape =\", cm.X[-1].shape)\n",
+        "print(\"Number of CMs saved =\", len(cm.X))"
       ]
     },
     {
