--- a/notebooks/gcolab_connectivity_matrices.ipynb
+++ b/notebooks/gcolab_connectivity_matrices.ipynb
@@ -1165,7 +1165,7 @@
         "            if this.n > limit: this.n /= 2.; this.l /= 2.\n",
         "        def __call__(set, weight): return set.l * weight, set.n * weight\n",
         "    def __init__(context, **params):\n",
-        "        context.set(_codes=[], _last=None, **params)\n",
+        "        context._set(_codes=[], _last=None, **params)\n",
         "    def clone(this, **changes):\n",
         "        copy = AWC()\n",
         "        copy.set(**this._clonable)\n",
