--- a/notebooks/find_en.ipynb
+++ b/notebooks/find_en.ipynb
@@ -2,24 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.eeg import struct\n",
-    "from src.core import REc\n",
     "from src.tools import exclude_from_sz_cm\n",
     "from src.game import classify_epochs, evaluate_nodes, check_until\n",
+    "from src.core import REc\n",
     "\n",
     "from itertools import combinations\n",
     "from os import listdir, makedirs\n",
     "import matplotlib.pyplot as plt\n",
-    "from joblib import Parallel, delayed"
+    "from joblib import Parallel, delayed\n",
+    "import random as rd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,33 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--------------------------------------------------------------\n",
-      "\n",
-      "Processing...\n",
-      "Connectivity matrices of ASJ-preseizure4-PLI-(70,150).prep\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "Can't get attribute 'Record' on <module '__main__'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/kivi/Documents/GitHub/epigame/notebooks/find_en.ipynb Cell 6\u001b[0m in \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/kivi/Documents/GitHub/epigame/notebooks/find_en.ipynb#W5sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m subject_id \u001b[39m=\u001b[39m file_cm\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m/\u001b[39m\u001b[39m\"\u001b[39m)[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][\u001b[39m0\u001b[39m:\u001b[39m3\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/kivi/Documents/GitHub/epigame/notebooks/find_en.ipynb#W5sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mConnectivity matrices of\u001b[39m\u001b[39m\"\u001b[39m, file_cm)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/kivi/Documents/GitHub/epigame/notebooks/find_en.ipynb#W5sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m cm \u001b[39m=\u001b[39m REc\u001b[39m.\u001b[39mload(path_cm \u001b[39m+\u001b[39m file_cm)\u001b[39m.\u001b[39mdata\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/kivi/Documents/GitHub/epigame/notebooks/find_en.ipynb#W5sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m nodes \u001b[39m=\u001b[39m cm\u001b[39m.\u001b[39mnodes\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/kivi/Documents/GitHub/epigame/notebooks/find_en.ipynb#W5sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m node_ids \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(nodes))) \n",
-      "File \u001b[0;32m~/Documents/GitHub/epigame/src/core.py:109\u001b[0m, in \u001b[0;36mRecordableGhost.load\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m    107\u001b[0m \u001b[39m@staticmethod\u001b[39m\n\u001b[1;32m    108\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mload\u001b[39m(filename):\n\u001b[0;32m--> 109\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(filename, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m file: \u001b[39mreturn\u001b[39;00m load(file)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: Can't get attribute 'Record' on <module '__main__'>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#TODO: Explain the rec object, how to access the results and the pipeline in the markdown above.\n",
     "\n",
@@ -97,7 +74,8 @@
     "import random as rd\n",
     "\n",
     "for file_cm in listdir(path_cm):\n",
-    "  if file_cm.split(\"-\")[1]==woi_code[woi] and \"PLI\" in file_cm:\n",
+    "  \n",
+    "  if file_cm.split(\"-\")[1]==woi_code[woi]:\n",
     "\n",
     "    print(\"\\n--------------------------------------------------------------\")\n",
     "    print(\"\\nProcessing...\")\n",
@@ -112,23 +90,13 @@
     "    print(\"Number of nodes =\",len(nodes))\n",
     "    print(\"\\nNodes:\", nodes)\n",
     "\n",
-    "    # For subject ASJ, for connectivity analysis using CC and SCR delta (WOI 2-5),\n",
-    "    # the seizure connectivity matrices have an extra channel that was not excluded;\n",
-    "    # The node was excluded from the labels list (nodes), therefore:\n",
-    "    # This block of code excludes the channel \"J9-J10\", with the index of the channel \"J10-J11\" in the current labels list.\n",
-    "    if subject_id==\"ASJ\" and ((file_cm.split(\"-\")[2]==\"CC\" and \"(70,150)\" not in file_cm) or (file_cm.split(\"-\")[2]==\"SCR\" and int(file_cm.split(\"-\")[1][-1]) in [2,3,4,5])):\n",
-    "      mismatch_channel_id = cm.nodes.index(\"J10-J11\")\n",
-    "      print(\"Mismatched node index:\", mismatch_channel_id)\n",
-    "      cm.X = exclude_from_sz_cm(cm.X, mismatch_channel_id)\n",
-    "      print(\"Check PREP file sets:\", list(cm.__dict__))\n",
-    "\n",
-    "    print(\"\\nTotal number of epochs =\", len(cm.X))\n",
-    "    print(\"Connectivity matrix shape =\", cm.X[0].shape)\n",
-    "    print(\"All matrices have the same shape:\", all([m.shape==(len(nodes),len(nodes)) for m in cm.X]))\n",
-    "    plt.figure(figsize=(5,5))\n",
-    "    plt.imshow(cm.X[-1], cmap='Blues', interpolation='nearest')\n",
-    "    plt.show()\n",
-    "    print(cm.X[-1])\n",
+    "    # print(\"\\nTotal number of epochs =\", len(cm.X))\n",
+    "    # print(\"Connectivity matrix shape =\", cm.X[0].shape)\n",
+    "    # print(\"All matrices have the same shape:\", all([m.shape==(len(nodes),len(nodes)) for m in cm.X]))\n",
+    "    # plt.figure(figsize=(5,5))\n",
+    "    # plt.imshow(cm.X[-1], cmap='Blues', interpolation='nearest')\n",
+    "    # plt.show()\n",
+    "    # print(cm.X[-1])\n",
     "\n",
     "    node_pairs = combinations(node_ids, 2)\n",
     "\n",
@@ -171,7 +139,8 @@
     "\n",
     "        file_net = file_cm.split(\".\")[0]\n",
     "        REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")\n",
-    "      \n",
+    "        net_size = max_net_size+1\n",
+    "\n",
     "      else:\n",
     "\n",
     "        # In case there not all, but many network with the best score, the processing time could become impractical;\n",
@@ -206,8 +175,6 @@
     "\n",
     "              count_node_groups += 1\n",
     "\n",
-    "\n",
-    "\n",
     "        print(f\"Tested {count_node_groups} node groups.\")\n",
     "\n",
     "        # Sort the latest networks by their score (indexed -1) and save the best evaluation score\n",
@@ -238,15 +205,14 @@
     "            \n",
     "        else: \n",
     "          print(\"A better network not found.\")\n",
-    "          net_size = max_net_size\n",
     "\n",
-    "      selected_net = sorted(set([t for n in best_net for t in n[1].split('<->')]))\n",
+    "          selected_net = sorted(set([t for n in best_net for t in n[1].split('<->')]))\n",
     "\n",
+    "          print(f\"\\nSelected network: {selected_net} ({len(selected_net)} nodes in total)\")\n",
     "\n",
-    "      print(f\"\\nSelected network: {selected_net} ({len(selected_net)} nodes in total)\")\n",
-    "\n",
-    "      file_net = file_cm.split(\".\")[0]\n",
-    "      REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")"
+    "          file_net = file_cm.split(\".\")[0]\n",
+    "          REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")\n",
+    "          net_size = max_net_size+1"
    ]
   }
  ],
